--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             background-image: url("img/topPanel.png");
             background-size: 100%;
             height: 100px;
+            border-style:solid;
+            border-bottom-color: #F7F7F7;
+  			border-bottom-style: ridge;
+  			border-bottom-width: 5px;
         }
          .ets-botton{
              border: 0;
@@ -34,11 +38,26 @@
          .ets-title{
              font-size: 20px;
              color: white;
-             margin-top: 70px;
+             margin-top: 60px;
              float: left;
              width: 200px;
          }
-		
+		.infomation{
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 50px;
+            width: 50%;
+			background-color: #f8f8f8;
+            border-style: solid;
+            border-width: 0px;
+            height: 300px;
+            text-align:center;
+		}
+         .infomation img{
+             width: 250px;
+             height: 200px;
+             margin-bottom: 40px;
+         }
     </style>
   </head>
   <body>
@@ -47,8 +66,11 @@
         <a href="main.html">
             <button type="button" class="ets-botton"></button>
         </a>
-
     </nav>
+    <div class="infomation">
+		<img class="title-img" src="img/headSetOn.jpg">
+        <p>出现 "使用您的麦克风" 时，请点击 "允许" ，然后点击右上角 "CONTINUE" 开始练习</p>
+    </div>
 
 
 
