--- a/mp3-lame-encoder-js-gh-pages/index.html
+++ b/mp3-lame-encoder-js-gh-pages/index.html
@@ -2,46 +2,45 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>托福口语1在线练习</title>
-	<link href="css/etsbootstrap.css" rel="stylesheet">
-
-	<style type="text/css">
-		.ets-nav{
-		    background-image: url("img/topPanel.png");
-		    background-size: 100%;
-		    height: 100px;
-		    border-style:solid;
-		    border-bottom-color: #F7F7F7;
-		border-bottom-style: ridge;
-		border-bottom-width: 5px;
-		}
-		 .ets-botton{
-		     border: 0;
-		     float: right;
-		     margin-right: 7px;
-		     margin-top: 2px;
-		     background: url("img/continue.gif");
-		     height: 40px;
-		     width: 74px;
-		 }
-		 .ets-title{
-		     font-size: 20px;
-		     color: white;
-		     margin-top: 60px;
-		     float: left;
-		     width: 200px;
-		 }
-		.infomation{
+    <title>Mp3LameEncoder.js demo</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+         <style type="text/css">
+      .ets-nav{
+            background-image: url("img/topPanel.png");
+            background-size: 100%;
+            height: 100px;
+            border-style:solid;
+            border-bottom-color: #F7F7F7;
+        border-bottom-style: ridge;
+        border-bottom-width: 5px;
+        }
+         .ets-botton{
+             border: 0;
+             float: right;
+             margin-right: 7px;
+             margin-top: 2px;
+             background: url("img/continue.gif");
+             height: 40px;
+             width: 74px;
+         }
+         .ets-title{
+             font-size: 20px;
+             color: white;
+             margin-top: 60px;
+             float: left;
+             width: 200px;
+         }
+    .infomation{
             margin-left: auto;
             margin-right: auto;
             margin-top: 50px;
             width: 50%;
-      		background-color: #f8f8f8;
+      background-color: #f8f8f8;
             border-style: solid;
             border-width: 0px;
             height: 300px;
             text-align:center;
-    	}
+    }
          .infomation img{
              width: 250px;
              height: 200px;
@@ -65,6 +64,9 @@
     <hr>
 
     <div class="container">
+      <h1><a href="https://github.com/higuma/mp3-lame-encoder-js">Mp3LameEncoder.js</a> demo</h1>
+      <p>Audio recording to MPEG-1 Audio Layer III (.mp3) test with Web Audio API</p>
+      <hr>
       <div class="form-horizontal">
         <div class="form-group">
           <label class="col-sm-3 control-label">Audio input</label>
