--- a/recorder.html
+++ b/recorder.html
@@ -13,7 +13,7 @@
   <script src="js/responsivevoice.js"></script>
 
 </head>
-<body>
+<body onload="readq()">
 <nav class="ets-nav">
   <div class="ets-title">托福口语在线练习</div>
   <a href="prepare.html">
@@ -24,7 +24,7 @@
   <img class="title-img" src="img/headSetOn.jpg">
   <p><script>printq();</script></p>
   <p>
-    <button type="button" class="btn-default" onclick="">test</button>
+    进度条
   </p>
 </div>
 
