Moded prepare.html
recorder和prepare合并

--- a/recorder.html
+++ b/recorder.html
@@ -11,6 +11,7 @@
   <script src="js/recorder/main.js"></script>
   <script src="js/toeflparctice.js"></script>
   <script src="js/responsivevoice.js"></script>
+  <script src="js/jquery.min.js"></script>
 
 </head>
 <body onload="readq()">
