--- a/prepare.html
+++ b/prepare.html
@@ -9,7 +9,10 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/toeflparctice.js"></script>
     <script src="js/responsivevoice.js"></script>
-
+    <audio id="prepaudio">
+        <source src="sound/speaking_prepare.mp3" type="audio/mpeg">
+        Your browser does not support the audio tag.
+    </audio>
 
 </head>
 <body>
@@ -32,9 +35,7 @@
     </div>
 
     <div id="showq" style="display: none">
-        <audio id="speaking_prep">
-            <source src="sound/speaking_prepare.mp3" type="audio/mp3">
-        </audio>
+
         aaaaaaaaaaaaaa
 
     </div>
