--- a/prepare.html
+++ b/prepare.html
@@ -9,10 +9,9 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/toeflparctice.js"></script>
     <script src="js/responsivevoice.js"></script>
-    <audio id="prepaudio">
-        <source src="sound/speaking_prepare.mp3" type="audio/mpeg">
-        Your browser does not support the audio tag.
-    </audio>
+    <audio id="prepaudio"><source src="sound/speaking_prepare.mp3" type="audio/mpeg">Your browser does not support the audio tag.</audio>
+    <audio id="beepaudio"><source src="sound/beep.mp3" type="audio/mpeg">Your browser does not support the audio tag.</audio>
+    <audio id="speakaudio"><source src="sound/speaking_speak.mp3" type="audio/mpeg">Your browser does not support the audio tag.</audio>
 
 </head>
 <body>
@@ -34,9 +33,9 @@
         </div>
     </div>
 
-    <div id="showq" style="display: none">
+    <div id="progressTimer15"></div>
 
-        aaaaaaaaaaaaaa
+    <div id="showq" style="display: none">
 
     </div>
 </div>
