--- a/prepare.html
+++ b/prepare.html
@@ -38,6 +38,9 @@
 
     <div id="showq" style="display: none"></div>
 
+    <div id="time-count">
+        &nbsp;
+    </div>
     <div class="barframe">
         <div id="timer15" class="progress" style="display: none">
             <div class="progress-bar ease-fifteen" id="timer15-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
