--- a/prepare.html
+++ b/prepare.html
@@ -21,7 +21,7 @@
 <nav class="ets-nav">
     <div class="ets-title">托福口语在线练习</div>
     <a >
-        <button type="button" onclick="change()" class="ets-botton"></button>
+        <button type="button" id="continue-button" onclick="change()" class="ets-botton"></button>
     </a>
 </nav>
 <div class="infomation" >
