--- a/prepare.html
+++ b/prepare.html
@@ -53,6 +53,7 @@
 
     <div>
         <canvas id="wavedisplay" style="display: none"></canvas>
+        <canvas id="analyser" style="display: none"></canvas>
     </div>
     <div>
         <a id="save" href="#" style="display: none"><img src="img/save.svg"></a>
