--- a/index.html
+++ b/index.html
@@ -1,34 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <title>托福口语1在线练习</title>
-	<link href="css/etsbootstrap.css" rel="stylesheet">
-    <link href="css/ets.css" rel="stylesheet">
-
-    <script src="js/recorder/audiodisplay.js"></script>
-    <script src="js/recorder/recorder.js"></script>
-    <script src="js/recorder/main.js"></script>
-
-
-  </head>
-  <body>
-    <nav class="ets-nav">
-        <div class="ets-title">托福口语在线练习</div>
-        <a href="prepare.html">
-            <button type="button" class="ets-botton"></button>
-        </a>
-    </nav>
-    <div class="infomation">
-    <img class="title-img" src="img/headSetOn.jpg">
-        <p>出现 "使用您的麦克风" 时，请点击 "允许" ，当下方出现波形时，说明麦克风功能正常。</p>
-        <p>准备好后，请点击右上角 "CONTINUE" 开始练习</p>
-    </div>
-
-    <div class="testaudio">
-        <canvas id="analyser"></canvas>
-    </div>
-
-  </body>
-
+    <title>TOEFL Practice Online - Speaking Task one</title>
+</head>
+<body>
+<h1>Hello world!</h1>
+</body>
 </html>
